<resources>
    <string name="app_name">customCalc</string>
    <string name="action_settings">Settings</string>

    //Operations
    <string name="clear">CLR</string>
    <string name="toggleSign">+/-</string>
    <string name="equal">=</string>
    <string name="addition">+</string>
    <string name="subtraction">-</string>
    <string name="multiplication">x</string>
    <string name="division">÷</string>
    <string name="power">^</string>
    <string name="decimal">.</string>
    <string name="leftParen">(</string>
    <string name="rightParen">)</string>


    //Numbers
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    //Other
    <string name="input">Sample Input</string>
    <string name="output">Sample Output</string>

</resources>
